# multiple-polymorphism

./: AUTHORS  CMakeLists.txt  Readme.md  conanfile.txt  test.py
include/pln/core/: se.cc  se.hpp  se.hxx
include/pln/morpho/: closing.cc  closing.hpp  dilation.cc  dilation.hpp  erosion.cc  erosion.hpp  opening.cc  opening.hpp
src/: convert.cc  convert.hh  main.cc
tests/: testsuite.py
tests/tests/: disc.py  disc_negative_radius.py  greyscale_disc_closing.py  greyscale_disc_dilation.py  greyscale_disc_erosion.py  greyscale_disc_opening.py  greyscale_mask_closing.py  greyscale_mask_dilation.py  greyscale_mask_erosion.py  greyscale_mask_opening.py  greyscale_rect_closing.py  greyscale_rect_dilation.py  greyscale_rect_erosion.py  greyscale_rect_opening.py  mask.py  rect.py  rect_both_negative.py  rect_negative_height.py  rect_negative_width.py  rgb_disc_closing.py  rgb_disc_dilation.py  rgb_disc_erosion.py  rgb_disc_opening.py  rgb_mask_closing.py  rgb_mask_dilation.py  rgb_mask_erosion.py  rgb_mask_opening.py  rgb_rect_closing.py  rgb_rect_dilation.py  rgb_rect_erosion.py  rgb_rect_opening.py
